--- a/.svgo.yml
+++ b/.svgo.yml
@@ -65,6 +65,7 @@ plugins:
   - addAttributesToSVGElement
   - removeOffCanvasPaths
   - reusePaths
+  - illustratorLayerIdsToClasses
 
 # configure the indent (default 4 spaces) used by `--pretty` here:
 #
